[gd_scene load_steps=10 format=3 uid="uid://c1i4665nmhwax"]

[ext_resource type="Script" uid="uid://d1ermms64q2lj" path="res://fps_enemy_template.gd" id="1_jev1x"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_g43l7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0pryo"]
albedo_color = Color(0.741176, 0, 0.141176, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xv8ug"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2se6g"]
radius = 8.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xh5je"]
radius = 0.672162

[sub_resource type="SphereShape3D" id="SphereShape3D_tdmhl"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ld2ym"]
albedo_color = Color(0, 0, 1, 1)
metallic = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7x4v7"]
albedo_color = Color(1, 0.0941176, 0.0941176, 1)
metallic = 1.0
metallic_specular = 1.0

[node name="fps_enemy" type="CharacterBody3D" groups=["Enemy"]]
script = ExtResource("1_jev1x")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_g43l7")
surface_material_override/0 = SubResource("StandardMaterial3D_0pryo")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_xv8ug")

[node name="AttackRange" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackRange"]
shape = SubResource("CylinderShape3D_2se6g")

[node name="AttackArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]
shape = SubResource("CapsuleShape3D_xh5je")

[node name="DamageArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.781363, 0)
shape = SubResource("SphereShape3D_tdmhl")

[node name="blaster" type="CSGBox3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.291783, 0.57053, 0.555665)
size = Vector3(0.128687, 0.145801, 0.592851)
material = SubResource("StandardMaterial3D_ld2ym")

[node name="muzzle" type="CSGCylinder3D" parent="blaster"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.00592232, 0.00054121, -0.349709)
radius = 0.0568142
height = 0.14681
material = SubResource("StandardMaterial3D_7x4v7")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, -8.9407e-08, 0, 1, 0, 8.9407e-08, 0, -1, 0, 0.635032, 0)
near = 0.001

[node name="RayCast3D" type="RayCast3D" parent="."]
